--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,9 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +22,30 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gallery-item-simple {
+  width: 25vw;
+  height: 20vh;
+  border: 1px solid black;
+  margin: 2px;
+}
+
+.gallery-item-detailed {
+  width: 80vw;
+  height: 20vh;
+  border: 1px solid black;
+  margin: 2px;
+  /* background-image: url(`${props.data.artworkUrl100}`); */
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: yellow;
+}
+
+.search-bar {
+  display: flex;
+  justify-content: center;
+  padding: 5px;
+}
+
+button {
+  margin: 5px;
 }
